[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-ai"
version = "0.1.0"
description = "Backend service scaffold for Blackjack AI gameplay and benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
]

[project.scripts]
blackjack-ai-api = "blackjack_ai.api.main:main"
blackjack-ai-benchmark = "blackjack_ai.benchmark.__main__:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["blackjack_ai*"]
namespaces = true
